--- a/genindex.html
+++ b/genindex.html
@@ -337,9 +337,9 @@
 </li>
         <li><a href="pyapi/grid.molgrid.html#grid.molgrid.MolGrid.__init__">(MolGrid method)</a>
 </li>
-        <li><a href="pyapi/grid.rtransform.html#grid.rtransform.MultiExpRTransform.__init__">(MultiExpRTransform method)</a>
+        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.MultiDomainGrid.__init__">(MultiDomainGrid method)</a>
 </li>
-        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.Ngrid.__init__">(Ngrid method)</a>
+        <li><a href="pyapi/grid.rtransform.html#grid.rtransform.MultiExpRTransform.__init__">(MultiExpRTransform method)</a>
 </li>
         <li><a href="pyapi/grid.basegrid.html#grid.basegrid.OneDGrid.__init__">(OneDGrid method)</a>
 </li>
@@ -797,7 +797,7 @@
 </li>
         <li><a href="pyapi/grid.molgrid.html#grid.molgrid.MolGrid.get_localgrid">(MolGrid method)</a>
 </li>
-        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.Ngrid.get_localgrid">(Ngrid method)</a>
+        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.MultiDomainGrid.get_localgrid">(MultiDomainGrid method)</a>
 </li>
         <li><a href="pyapi/grid.basegrid.html#grid.basegrid.OneDGrid.get_localgrid">(OneDGrid method)</a>
 </li>
@@ -1026,7 +1026,7 @@
 </li>
         <li><a href="pyapi/grid.molgrid.html#grid.molgrid.MolGrid.integrate">(MolGrid method)</a>
 </li>
-        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.Ngrid.integrate">(Ngrid method)</a>
+        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.MultiDomainGrid.integrate">(MultiDomainGrid method)</a>
 </li>
         <li><a href="pyapi/grid.basegrid.html#grid.basegrid.OneDGrid.integrate">(OneDGrid method)</a>
 </li>
@@ -1235,7 +1235,7 @@
 </li>
         <li><a href="pyapi/grid.molgrid.html#grid.molgrid.MolGrid.moments">(MolGrid method)</a>
 </li>
-        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.Ngrid.moments">(Ngrid method)</a>
+        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.MultiDomainGrid.moments">(MultiDomainGrid method)</a>
 </li>
         <li><a href="pyapi/grid.basegrid.html#grid.basegrid.OneDGrid.moments">(OneDGrid method)</a>
 </li>
@@ -1276,6 +1276,8 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pyapi/grid.ngrid.html#grid.ngrid.MultiDomainGrid">MultiDomainGrid (class in grid.ngrid)</a>
+</li>
       <li><a href="pyapi/grid.rtransform.html#grid.rtransform.MultiExpRTransform">MultiExpRTransform (class in grid.rtransform)</a>
 </li>
   </ul></td>
@@ -1348,7 +1350,7 @@
         <li><a href="pyapi/grid.cubic.html#grid.cubic.UniformGrid.ndim">(UniformGrid property)</a>
 </li>
       </ul></li>
-      <li><a href="pyapi/grid.ngrid.html#grid.ngrid.Ngrid">Ngrid (class in grid.ngrid)</a>
+      <li><a href="pyapi/grid.ngrid.html#grid.ngrid.MultiDomainGrid.num_domains">num_domains (MultiDomainGrid property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1411,7 +1413,7 @@
 </li>
         <li><a href="pyapi/grid.molgrid.html#grid.molgrid.MolGrid.points">(MolGrid property)</a>
 </li>
-        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.Ngrid.points">(Ngrid property)</a>
+        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.MultiDomainGrid.points">(MultiDomainGrid property)</a>
 </li>
         <li><a href="pyapi/grid.basegrid.html#grid.basegrid.OneDGrid.points">(OneDGrid property)</a>
 </li>
@@ -1553,7 +1555,7 @@
 </li>
         <li><a href="pyapi/grid.molgrid.html#grid.molgrid.MolGrid.save">(MolGrid method)</a>
 </li>
-        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.Ngrid.save">(Ngrid method)</a>
+        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.MultiDomainGrid.save">(MultiDomainGrid method)</a>
 </li>
         <li><a href="pyapi/grid.basegrid.html#grid.basegrid.OneDGrid.save">(OneDGrid method)</a>
 </li>
@@ -1651,7 +1653,7 @@
 </li>
         <li><a href="pyapi/grid.molgrid.html#grid.molgrid.MolGrid.size">(MolGrid property)</a>
 </li>
-        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.Ngrid.size">(Ngrid property)</a>
+        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.MultiDomainGrid.size">(MultiDomainGrid property)</a>
 </li>
         <li><a href="pyapi/grid.basegrid.html#grid.basegrid.OneDGrid.size">(OneDGrid property)</a>
 </li>
@@ -1839,7 +1841,7 @@
 </li>
         <li><a href="pyapi/grid.molgrid.html#grid.molgrid.MolGrid.weights">(MolGrid property)</a>
 </li>
-        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.Ngrid.weights">(Ngrid property)</a>
+        <li><a href="pyapi/grid.ngrid.html#grid.ngrid.MultiDomainGrid.weights">(MultiDomainGrid property)</a>
 </li>
         <li><a href="pyapi/grid.basegrid.html#grid.basegrid.OneDGrid.weights">(OneDGrid property)</a>
 </li>
